WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250589
[WebAuthn] Conditional passkey request presents conditional control even after AbortController.abort()
https://bugs.webkit.org/show_bug.cgi?id=250589
Summary
[WebAuthn] Conditional passkey request presents conditional control even afte...
Jonathan Hurshman
Reported
2023-01-13 11:57:19 PST
Steps to reproduce: 1. Set up an AbortController 2. <input autocomplete="username webauthn"> and a button whose click handler will call the abortController.abort(), hide the username, and show a password control. 3. Perform webauthn get with conditional mediation: navigator.credentials.get({ signal: abortController.signal, mediation: 'conditional', publicKey: { challenge: <challengeFromServer>, }, allowCredentials: [] }); 3. Click the input, conditional UI appears. 4. Click the abort control. 6. Set focus to the password field. 7. Conditional UI appears again. (If user attempts to use the passkey, console shows error "AbortError: Aborted by AbortSignal".) Expected behavior: In step 7, no conditional UI should be displayed, since the get has been aborted.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-20 11:58:13 PST
<
rdar://problem/104485543
>
pascoe@apple.com
Comment 2
2023-02-01 06:50:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9449
EWS
Comment 3
2023-02-02 08:19:30 PST
Committed
259754@main
(ba76ae810b9d): <
https://commits.webkit.org/259754@main
> Reviewed commits have been landed. Closing PR #9449 and removing active labels.
pascoe@apple.com
Comment 4
2023-02-07 14:59:50 PST
***
Bug 251817
has been marked as a duplicate of this bug. ***
Mathieu Perreault
Comment 5
2023-02-14 07:10:51 PST
Very happy to see this issue being fixed! Could someone advise on which Safari/iOS version we could see this commit in (Beta, etc.)?
Matthew Miller (Cisco)
Comment 6
2023-02-22 19:47:34 PST
Release notes for Safari Technology Preview 164 mention that the fix for this issue is included in the release! 🎉
https://developer.apple.com/safari/technology-preview/release-notes/
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug