Cherry-pick ba76ae810b9d. rdar://problem/99535627

[WebAuthn] Conditional passkey request presents conditional control even after AbortController.abort()
    https://bugs.webkit.org/show_bug.cgi?id=250589
    rdar://99535627

    Reviewed by Brent Fulgham.

    Currently conditional mediation requests do not get cancelled whenever the abort controller for its
    request is called. This patch changes that by calling cancel on the daemon whenever the abort controller
    is called.

    * Source/WebCore/Modules/webauthn/AuthenticatorCoordinator.cpp:
    (WebCore::AuthenticatorCoordinator::discoverFromExternalSource):
    * Source/WebCore/Modules/webauthn/AuthenticatorCoordinatorClient.h:
    * Source/WebKit/UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.cpp:
    (WebKit::WebAuthenticatorCoordinatorProxy::cancel):
    * Source/WebKit/UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.h:
    * Source/WebKit/UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.messages.in:
    * Source/WebKit/WebProcess/WebAuthentication/WebAuthenticatorCoordinator.cpp:
    (WebKit::WebAuthenticatorCoordinator::cancel):
    * Source/WebKit/WebProcess/WebAuthentication/WebAuthenticatorCoordinator.h:

    Canonical link: https://commits.webkit.org/259754@main

Canonical link: https://commits.webkit.org/259548.52@safari-7615.1.21.11-branch